# nhis-ml-benchmark

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  ML2.ipynb  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: reference_statistics.md
paper/: paper.bib  paper.md
presentation/: nhis_srh_presentation.tex
src/: debug_prep_shape.py  grouped_importance.py  map_feature_names.py  name_importances_quick.py  nhis_srh_presentation.tex  viz_grouped_importance.py
src/nhisml/: __init__.py  build_core.py  cli.py  evaluate.py  featuresets.py  fetch.py  preprocess.py  process.py  subgroup.py  tasks.py  train.py  utils.py  validate_data.py
src/nhisml.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_build_core.py  test_cli.py  test_data_integration.py  test_evaluate.py  test_featuresets.py  test_fetch.py  test_preprocess.py  test_subgroup.py  test_tasks.py  test_utils.py
